27.10.2018 Version 0.2.28
Amazon folder and commands are updated as dbhost_username_profileid to eliminate conflict. 
Amazon loading status feature is updated to keep sshtext available while reloading.

26.10.2018 Version 0.2.27
Minor bug fixed while creating empty channels for deactivation of process feature .

26.10.2018 Version 0.2.26
Deactivation of process feature is updated.

26.10.2018 Version 0.2.25
Deactivation of process feature by using "when" syntax is updated.

25.10.2018 Version 0.2.24
"&&" Fix in nextflow command prep

25.10.2018 Version 0.2.23
Default command is defined for amazon before running nextflow: "source /etc/profile && source ~/.bash_profile"

24.10.2018 Version 0.2.22
Starting clusterDeamon feature is removed to activate autoscale function.

24.10.2018 Version 0.2.21
Default command is defined before running nextflow: "source /etc/profile && source ~/.bash_profile"

22.10.2018 Version 0.2.20
Pipeline modules added to public pipeline page for visualization.

22.10.2018 Version 0.2.19
MinInstance and MaxInstance feature updated.

22.10.2018 Version 0.2.18
Bug fixed regarding to deleting project_pipeline_inputs.

21.10.2018 Version 0.2.17
Bug fixed regarding to deactivation of process feature.

21.10.2018 Version 0.2.16
Deactivation of process feature is added by using "when" syntax.

17.10.2018 Version 0.2.15
Bug fixed for dynamic autofill feature in form fields of nested pipelines.

17.10.2018 Version 0.2.14
Bug fixed for dynamic autofill feature in the form fields 

17.10.2018 Version 0.2.13
Nested pipeline executor settings fixed.
Autofill feature for process executor settings added to nested pipelines.
Bug fixed in main page where process name called as undefined.
Checkboxes of executor settings fixed to support dynamic change.
Checkboxes of each executor settings dynamicaly checked when user change one parameter.

16.10.2018 Version 0.2.12
Amazon modal multiple node feature updated and commands added for deamon log removal. 
